<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yx="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.ml.yx.activity.base.SelectTargetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/jianzhi_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/comm_border_selector"
            android:padding="@dimen/dp3">

            <com.ml.yx.views.RoundAngleImageView
                android:id="@+id/iv_jianzhi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/jianzhi"
                yx:xRadius="@dimen/dp2"
                yx:yRadius="@dimen/dp2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp30"
                android:shadowColor="@color/black"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="@string/target_text_jianzhi"
                android:textColor="@color/white"
                android:textSize="@dimen/sp17" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/suxing_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/comm_border_selector"
            android:padding="@dimen/dp3">

            <com.ml.yx.views.RoundAngleImageView
                android:id="@+id/iv_suxing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/suxing"
                yx:xRadius="@dimen/dp2"
                yx:yRadius="@dimen/dp2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp30"
                android:shadowColor="@color/black"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="@string/target_text_suxing"
                android:textColor="@color/white"
                android:textSize="@dimen/sp17" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/zengji_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/comm_border_selector"
            android:padding="@dimen/dp3">

            <com.ml.yx.views.RoundAngleImageView
                android:id="@+id/iv_zengji"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/zengji"
                yx:xRadius="@dimen/dp2"
                yx:yRadius="@dimen/dp2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp30"
                android:shadowColor="@color/black"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="@string/target_text_zengji"
                android:textColor="@color/white"
                android:textSize="@dimen/sp17" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
